v3.6.11 (XXXX-XX-XX)
--------------------

* Fix recovery of "clientId" values in Agency when restarting an agent from
  persistence.

* Add query execution time and query id to audit log query messages.

* Fix AR-113. Disallow non-values in the AQL geo-index-optimizer rule.

* Added the following agency-related metrics:
  - `arangodb_agency_client_lookup_table_size`: current number of entries in
    agency client id lookup table. This gauge is available only on agent
    instances.
  - `arangodb_agency_callback_count`: current number of agency callbacks
    registered. This gauge will be effecitive on coordinators and DB servers.

* Added SNI support for arangosh.

* Fix cluster-internal replication of documents with special keys (percent
  character, which has a special meaning when used inside URLs).

* Change serialized "term" value from double to integer value after persisting a
  compaction snapshot, so there is no truncation for larger term values.

* When querying the list of currently running or slow AQL queries, ignore
  not-yet created databases on other coordinators.

* Fix Windows directory creation error handling.

* Add an AQL query kill check during early pruning. Fixes issue #13141.

* Reduce the number of dropped followers when running larger (>= 128 MB) write
  transactions in the RocksDB storage engine.

* Added metrics for collection locks:
  - `arangodb_collection_lock_timeouts_exclusive`: Number of lock timeouts when
    trying to acquire collection exclusive locks
  - `arangodb_collection_lock_timeouts_write`: Number of lock timeouts when
    trying to acquire collection write locks
  - `arangodb_collection_lock_acquisition_micros`: Total amount of collection
    lock acquisition time [μs]
  - `arangodb_collection_lock_acquisition_time`: Total collection lock
    acquisition time histogram [s]

* Reduce lock timeout on followers to 15 seconds.
  Rationale: we should not have any locking conflicts on followers, generally.